# Healio

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  langgraph.json  pyproject.toml
app/: __init__.py  config.py  constants.py  exceptions.py  health.py  logging_config.py  main.py  metrics.py
app/channels/: __init__.py  normalizer.py  telegram.py  whatsapp.py
app/graph/: __init__.py  edges.py  graph.py  nodes.py  state.py
app/nlp/: __init__.py  biobert.py  severity.py
app/tools/: __init__.py  alerts.py  calendar.py  ehr.py
data/: mock_patients.json
docs/: CLINIC_SETUP.md  DEPLOYMENT.md  HEALTH_MONITORING.md  LOCAL_SETUP.md  high-level-architecture.md  plan.md
docs/requirements/: requirements.md
scripts/: demo.py
tests/: __init__.py  conftest.py  test_calendar.py  test_channels.py  test_graph.py  test_nlp.py  test_tools.py
